# test_task

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: weather_adapter.h
measures/: relhumidity.txt  temperature.txt
src/: publisher_member_function.cpp  subscriber_member_function.cpp  weather_adapter.h  weather_gen.cpp  weather_listener.cpp  weather_station.cpp
src/gui/: CMakeLists.txt  main.cpp  weather_node.cpp  weather_node.h
src/gui/qml/: SensorBar.qml  main.qml  qml.qrc
src/station/: CMakeLists.txt  weather_listener.cpp  weather_station.cpp
